tests/error/linear_errors/while_unused.err
Error: Drop violation (at $FILE:8:4)
   | 
 6 | @guppy
 7 | def test(n: int) -> None:
 8 |     q = qubit()
   |     ^ Variable `q` with non-droppable type `qubit` may be leaked
   |       ...
   | 
10 |     while i < n:
   |           ----- if this expression is `False`

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
